2003-05-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.4 ========================
	* 

2003-05-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3d.test: Added propagation of auto_path so that
	  sub-processes are able to find additional packages even if
	  tcllib is not installed.

2003-04-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3d.test: Updated to new version number.

2003-04-11  Andreas Kupries  <andreask@activestate.com>

	* pop3d.tcl:
	* pop3d.man:
	* pop3d_dbox.tcl:
	* pop3d_dbox.man:
	* pop3d_udb.tcl:
	* pop3d_udbx.man:
	* pkgIndex.tcl: Set version of the package 'pop3d' to to
	  1.0.1. 'dbox' is now at version 1.1. 'udb' is now at version
	  1.0.1.

2003-04-09  Andreas Kupries  <andreask@activestate.com>

	* pop3d.tcl: A bit more logging of internals.

2003-04-02  Andreas Kupries  <andreask@activestate.com>

	* pop3d_dbox.tcl: Started to add log output.

	* pop3d.tcl: Added "."-stuffing. Not done by mime, out of scope,
	  has to be done by the transport, i.e. the pop3 demon. Also
	  removed the transmission of superfluous newline at end of the
	  message.

2003-01-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3d.man: More semantic markup, less visual one.
	* pop3d_dbox.man:
	* pop3d_udb.man: 

2002-09-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3d.tcl (Transfer): Use a single dot to write the
	  terminator. Not \n.\n. Puts does the terminating \n, and
	  buildmessage/copymessage the other. Brought the client out of
	  sync after a retrieval because of an empty line after the
	  terminator line of the multi-line response.

2002-08-31  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Note aside: The pop3 server may understate the size of a message
	  and of the maildrop. This happens as the package 'mime' we use
	  to transfer a message may add additional headers not present in